<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">
    <data>
        <variable
            name="viewmodel"
            type="com.example.aitravelplanner.ui.interests.InterestsViewModel" />
    </data>
    <ScrollView
        android:id="@+id/interest_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="@string/app_name"
        android:contentDescription="@string/app_name"
        tools:context=".ui.interests.InterestsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_story"
                app:labelText="@string/interest_story"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.storyValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_art"
                app:labelText="@string/interest_art"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.artValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_party"
                app:labelText="@string/interest_party"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.partyValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/nature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_nature"
                app:labelText="@string/interest_nature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.natureValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/entertainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_entertainment"
                app:labelText="@string/interest_entertainment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.entertainmentValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_sport"
                app:labelText="@string/interest_sport"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.sportValue}" />

            <com.example.aitravelplanner.ui.components.interest.InterestComponent
                android:id="@+id/shopping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:imageSrc="@drawable/interest_shopping"
                app:labelText="@string/interest_shopping"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderValue="@={viewmodel.shoppingValue}" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:onClick="@{() -> viewmodel.confirmClicked()}"
                android:background="@drawable/style_rounded_corners"
                android:text="@string/confirm" />

        </LinearLayout>
    </ScrollView>
</layout>