...
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </LinearLayout>
            <!-- Slider -->
            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#FFFF"
...
